syntax="proto3";

package groundctrl;

option go_package = "github.com/Boyul-Kim/groundCTRL/proto/groundctrl;groundctrl";

//run in root:
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/telemetry/telemetry.proto

message DataChunk {
    string satellite_id = 1;
    int64 timestamp = 2;
    float bus_voltage = 3;
    float battery_temp = 4;
    float cpu_temp = 5;
    float solar_panel_current = 6;
    string attitude_mode = 7;
    float gyro_x = 8;
    float gyro_y = 9;
    float gyro_z = 10;
    float sun_sensor_angle = 11;
    string comm_link = 12;
    string last_command_ack = 13;
    int32 error_flags = 14;
    bool safe_mode = 15;
    }

message Ack {
    string status = 1;
}

service TelemetryIngestor {
    rpc StreamData(stream DataChunk) returns (stream Ack);
}